Fri Apr 30 11:20:13 CEST 2004 Jordi Mallach <jordi@debian.org

  * po/ca.po: Update Catalan translation.

Tue Apr 27 21:49:25 BST 2004 Ruben Porras <nahoo82@telefonica.net>

  * man/es/dpkg-scansources.8: Added Spanish manpage.
  * man/es/Makefile.in: Install it.

Tue Apr 27 19:47:37 BST 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/dpkg-architecture.pl (rewrite_gnu): Add a new regexp for
  parsing i386-gnu style triplets on the Hurd.

Tue Apr 27 19:23:01 BST 2004 Scott James Remnant <scott@netsplit.com>

  * main/dpkg.8: Correct reference to non-existant --force-reinstreq
  option to --force-remove-reinstreq.

Tue Apr 27 19:01:28 BST 2004 Ruben Porras <nahoo82@telefonica.net>

  * man/es/start-stop-daemon.8, man/es/dselect.8, man/es/dpkg.8,
  man/es/dpkg-checkbuilddeps.8, man/es/dpkg-deb.1,
  man/es/dpkg-scanpackages.8: Updated Spanish manpages.

Mon Apr 26 20:28:58 CEST 2004 Tollef Fog Heen <tfheen@debian.org>

  * scripts/dpkg-architecture.pl, archtable: Add AMD64/x86_64 support.
    Also reindent archtable so the columns line up nicely.

Mon Apr 26 18:53:15 BST 2004 Scott James Remnant <scott@netsplit.com>

  * configure.in: Put the man page directories in alphabetical order.
  * man/Makefile.in: Likewise
  * debian/rules: Extract manual page directories from Makefile.in and
  use that list instead of hardcoding them.

Sun Apr 25 19:00:20 BST 2004 Scott James Remnant <scott@netsplit.com>

  * version-nr, debian/changelog: Bump version to 1.10.22.

Sun Apr 25 18:02:34 BST 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/install-info.pl: Add --dir-file option for compatibility
  with GNU install-info.  Correct code to break infinite loop.

Sun Apr 25 17:57:46 BST 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/dpkg-divert.8: Document that diverting shared libraries
  can be troublesome when combined with ldconfig.

Sun Apr 25 17:53:06 BST 2004 Scott James Remnant <scott@netsplit.com>
