@@ -6,6 +6,10 @@ dpkg (1.10.22) unstable; urgency=low
     so we include Spanish, Russian and Brazilian Portugese.  Closes: #245994.
   * Correct dpkg manpage to refer to --force-remove-reinstreq instead of
     non-existant --force-reinstreq option.  Closes: #232831.
+  * Fix dpkg-source (actually controllib.pl) to output the field name
+    properly again.  Closes: #246595.
+  * Make dpkg-scanpackages output Origin and Bugs fields with proper
+    casing.  Closes: #154422.
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - Spanish manpages (Ruben Porras).  Closes: #246158, #246159, #246160,
