@@ -1,3 +1,13 @@
+Sun May  2 10:22:25 CEST 2004 Tollef Fog Heen <tfheen@debian.org>
+
+  * scripts/dpkg-scanpackages.pl: Give proper case for Origin and
+    Bugs.
+
+Sun May  2 10:04:25 CEST 2004 Tollef Fog Heen <tfheen@debian.org>
+
+  * scripts/controllib.pl: Fix unknown() so it actually manages to pick
+    out the correct field name.
+
 Fri Apr 30 11:20:13 CEST 2004 Jordi Mallach <jordi@debian.org
 
   * po/ca.po: Update Catalan translation.
